@@ -139,7 +139,7 @@
 
     <ul>
       <li>perl 5 (version 5.8 recommended)</li>
-      <li><a href="http://www.linpro.no/lwp/">LWP 5.76</a> (the
+      <li><a href="http://www.linpro.no/lwp/">LWP 5.803</a> (the
 	  libwww-perl 5 module)</li>
       <li>HTML::Parser 3.33</li>
       <li>URI 1.10</li>
@@ -189,7 +189,7 @@
 <address>
 <!-- Created: Sun Aug 31 19:50:42 CEST 1997 -->
 <!-- hhmts start -->
-Last modified: Sun Feb 18 08:25:22 CET 2007
+Last modified: Mon Feb 26 16:48:23 CET 2007
 <!-- hhmts end -->
 </address>
   </body>
