@@ -1,3 +1,8 @@
+2007-02-26  Hans de Graaff  <hans@degraaff.org>
+
+	* Makefile.PL: Require LWP 5.803 or better. decoded_content got
+	added in 5.802 and 5.803 added some important bugfixes.
+
 2007-02-03  Hans de Graaff  <hans@degraaff.org>
 
 	* Checkbot 1.79 is released
